--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -37,7 +37,7 @@
 }
 
 .page-header .header-content strong {
-    font: 700 3.6rem Arquivo;
+    font: 700 3.6rem Archivo;
     line-height: 4.2rem;
     color: var(--color-title-in-primary);
 }
@@ -57,16 +57,53 @@
 #search-teachers button {
     width: 100%;
     height: 5.6rem;
-    background: var(--color-button-text);
+    background: var(--color-secondary);
     color: var(--color-button-text);
     border: 0;
     border-radius: .8rem;
     cursor: pointer;
-    font:700 1.6rem Arquivo;
+    font:700 1.6rem Archivo;
     display: flex;
     align-items: center;
     justify-content: center;
     text-decoration: none;
     transition: background 0.2s;
     margin-top: 3.2rem;
+}
+
+#search-teachers button:hover {
+    background-color: var(--color-secondary-dark);
+}
+
+.select-block label,
+.input-block label {
+    font-size: 1.4rem;
+    color: var(--color-text-complement);
+}
+
+.input-block input,
+.select-block select {
+    width: 100%;
+    height: 5.6rem;
+    margin-top: 0.8rem;
+    border-radius: 0.8rem;
+    background: var(--color-input-background);
+    border: 1px solid var(--color-line-in-white);
+    outline: 0;
+    padding: 0 1.6rem;
+    font: 1.6rem Archivo;
+}
+
+.input-block {
+    position: relative;
+}
+
+.input-block:focus-within::after {
+    content: "";
+    width: calc(100% - 3.2rem);
+    height: 2px;
+    background: var(--color-primary-light);
+    position: absolute;
+    left: 1.6rem;
+    bottom: 0;
 }
