--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -38,7 +38,7 @@
             </header>
 
             <main>
-                <form action="" id="create-class">
+                <form action="/save-classes" id="create-class" method="POST">
                     <fieldset>
                         <legend>Seus dados</legend>
 
@@ -47,7 +47,7 @@
                             <input name="name" id="name" required>
                         </div>
                         <div class="input-block">
-                            <label for="avatar">Link da sua foto<small>(comece com httmp://)</small></label>
+                            <label for="avatar">Link da sua foto<small>(comece com https://)</small></label>
                             <input name="avatar" id="avatar" type="url" required>
                         </div>
                         <div class="input-block">
