--- a/src/views/study.html
+++ b/src/views/study.html
@@ -66,33 +66,37 @@
 
             <main>
 
-                {%for proffy in proffys %}
+                {% if proffys == "" %}
+                    <p class="no-results">Nenhum professor encontrado com a sua pesquisa.</p>
 
-                    <article class="teacher-item">
-                        <header>
-                            <img 
-                                src="{{proffy.avatar}}"
-                                alt="{{proffy.name}}">
-                                
-                            <div>
-                                <strong>{{proffy.name}}</strong>
-                                <span>{{proffy.subject}}</span>
-                            </div>
-                        </header>
-                    
-                        <p>{{proffy.bio}}</p>
-                    
-                        <footer>
-                            <p>Preço/hora<strong>R$ {{proffy.cost}}</strong>
-                            </p>
-                            <a href="https://api.whatsapp.com/send?1=pt_BR&phone{{proffy.whatsapp}}&text=Tenho interesse na sua aula de {{proffy.subject}}, {{proffy.name}}" class="button" target="_blank">
-                                <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
-                            </a>
-                        </footer>
-                    </article>
+                {% else %}
+                    {%for proffy in proffys %}
+                        <article class="teacher-item">
+                            <header>
+                                <img 
+                                    src="{{proffy.avatar}}"
+                                    alt="{{proffy.name}}">
+                                    
+                                <div>
+                                    <strong>{{proffy.name}}</strong>
+                                    <span>{{proffy.subject}}</span>
+                                </div>
+                            </header>
+                        
+                            <p>{{proffy.bio}}</p>
+                        
+                            <footer>
+                                <p>Preço/hora<strong>R$ {{proffy.cost}}</strong>
+                                </p>
+                                <a href="https://api.whatsapp.com/send?1=pt_BR&phone{{proffy.whatsapp}}&text=Tenho interesse na sua aula de {{proffy.subject}}, {{proffy.name}}" class="button" target="_blank">
+                                    <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
+                                </a>
+                            </footer>
+                        </article>
 
-                {%endfor%}
-
+                    {% endfor %}
+                {% endif %}
+                
             </main>
 
         </div>
